--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 <div class="container-fluid products-baner">
+    <div class="col my-auto">
+        <h2 class="logo-font text-center">Product Detail</h2>
+        <hr class="hr-heading-beige w-25">
+    </div>
     <div class="row">
         <!--d-flex justify-content-center = previous extra code-->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
