--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -66,33 +66,93 @@
     <div class="container h-100">
         <div class="row h-100 d-flex justify-content-center">
             <div class="col-7 col-md-6 my-auto">
-                <h2 class="logo-font text-black text-center">New Releases</h2>
+                <h1 class="logo-font text-black text-center  pt-3">New Releases</h1>
+                <hr class="w-25 hr-heading-beige p-2">
             </div>
         </div>
     </div>
-</div>
-<div class="container">
-    {% for product in products %}
-    <div class="owl-carousel owl-theme">
-        <div class="item">
-            <div class="card">
-                <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="container">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <div class="card">
+                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Product name</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Product name2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Product name3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Product name4</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Product name5</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Product name6</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
 </div>
 
 <!-- Juicer embedden instagram feed https://www.juicer.io/feeds/futureretro_store -->
 <div class="home-page-item">
     <div class="container">
-        <h1 class="logo-font text-black text-center">Instagram</h1>
+        <h1 class="logo-font text-black text-center pt-3">Instagram</h1>
         <hr class="w-25 hr-heading-beige">
         <ul class="juicer-feed instagram-feed" data-feed-id="futureretro_store" data-per="3" data-gutter="10"
             style="colors">
