Added image noimage.png to New Releases section on homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -75,7 +75,7 @@
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <div class="card">
-                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Product name</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -87,7 +87,7 @@
             </div>
             <div class="item">
                 <div class="card">
-                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Product name2</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -99,7 +99,7 @@
             </div>
             <div class="item">
                 <div class="card">
-                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Product name3</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -111,7 +111,7 @@
             </div>
             <div class="item">
                 <div class="card">
-                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Product name4</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -123,7 +123,7 @@
             </div>
             <div class="item">
                 <div class="card">
-                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Product name5</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -135,7 +135,7 @@
             </div>
             <div class="item">
                 <div class="card">
-                    <img class="card-img-top" src="media/noimage.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Product name6</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
