Added About link to nav in main-nav

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -40,15 +40,21 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" 
+            <a class="logo-font font-weight-bold nav-link text-black  mr-5" href="#" 
                 id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
+                Specials
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
                 <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
                 <a href="{% url 'products' %}?category=new_arrivals,clearance" class="dropdown-item">All Specials</a>
             </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black" href="#">
+                About
+            </a>
         </li>
         <li class="nav-item">
             <div class="text-black nav-link d-block d-lg-none col-6">
