--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,7 +1,11 @@
 {% if item.product.image %}
-    <img class="img-fluid rounded" src="{{ item.product.image.url }}"
-        alt="{{ item.product.name }}">
+    <div>
+        <img class="img-fluid rounded" src="{{ item.product.image.url }}"
+            alt="{{ item.product.name }}">
+    </div>
 {% else %}
-    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png"
-        alt="{{ item.product.name }}">
+    <div>
+        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png"
+            alt="{{ item.product.name }}">
+    </div>
 {% endif %}
