--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                     <h2 class="text-black my-0 hero-heading">Future<span>Retro</span></h2>
                 </a>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-block d-xl-block">
                 <!-- Form element copied from Boutique Ado project -->
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
