Trying to fix Stripe webhook issue

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -170,7 +170,7 @@
                             <p class="mb-0 text-black bold">Delivery</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.delivery }}</p>
+                            <p class="mb-0">{{ order.delivery_cost }}</p>
                         </div>
                     </div>
                     <div class="row">
