Updated allauth templates and tested profiles

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -17,6 +17,8 @@
             <hr class="w-25 hr-heading-beige">
         </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
+        {{ profile }}
+    </div>
 </div>
 {% endblock %}
