Updated profiles page to include shipping info and order history

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -186,12 +186,21 @@
         </div>
         <div class="row">
             <div class="col-lg-8 offset-lg-2 text-center">
-                <a href="{% url 'products' %}?category=new_arrivals" class="btn btn-black rounded-0 my-2">
-                    <span class="icon mr-2">
-                        <i class="fas fa-store-alt"></i>
-                    </span>
-                    <span class="text-uppercase">Check out new releases!</span>
-                </a>
+                {% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-angle-left"></i>
+                        </span>
+                        <span class="text-uppercase">Back to profile</span>
+                    </a>
+                {% else %}
+                    <a href="{% url 'products' %}?category=new_arrivals" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-store-alt"></i>
+                        </span>
+                        <span class="text-uppercase">Check out new releases!</span>
+                    </a>
+                {% endif %}
             </div>
         </div>
     </div>
