--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -17,7 +17,7 @@ https://github.com/ckz8780/boutique_ado_v1/blob/d2c3833acdc59434e38f2ba03b4b5135
                 <hr class="mt-1 mb-3">
             </div>
         </div>
-        {% if grand_total %}
+        {% if grand_total and not on_profile_page %}
             <p class="logo-font bg-white text-black py-1">Your Bag ( {{ product_count }} )</p>
             <div class="bag-notification-wrapper">
                 {% for item in bag_items %}
