--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -191,7 +191,7 @@
                         <span class="icon mr-2">
                             <i class="fas fa-angle-left"></i>
                         </span>
-                        <span class="text-uppercase">Back to profile</span>
+                        <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
                     <a href="{% url 'products' %}?category=new_arrivals" class="btn btn-black rounded-0 my-2">
