Added line break in 'About FutureRetro' header on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,7 +36,7 @@
 <!-- Company Information  -->
 <div class="home-page-item">
     <div class="container">
-        <h1 class="logo-font text-black text-center">About FutureRetro</h1>
+        <h1 class="logo-font text-black text-center">About<br>FutureRetro</h1>
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <hr class="w-25 hr-heading-beige">
