Finished adding product functionality to product admin

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5 d-lg-none" href="{% url 'home' %}" 
+                id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Home
+            </a>
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" 
                 id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
