Changed OWL carousel link text and added crediting comments

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </div>
-<!-- Company Information  -->
+<!-- FutureRetro Company Information  -->
 <div class="home-page-item">
     <div class="container">
         <h1 class="logo-font text-black text-center">About<br>FutureRetro</h1>
@@ -63,7 +63,11 @@
     </div>
 </div>
 
-<!-- New releases -->
+<!-- 
+    New releases - Owl Carousel 
+    Code built following: https://www.youtube.com/watch?v=EG-sXgY1md4&t=3s
+    Owl Carousels can be found: https://owlcarousel2.github.io/OwlCarousel2/demos 
+-->
 <div class="home-page-item">
     <div class="container h-100">
         <div class="row h-100 d-flex justify-content-center">
@@ -89,7 +93,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ product.name }}</h5>
                             <p class="card-text">${{ product.price }}</p>
-                            <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">Go somewhere</a>
+                            <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">Product Detail</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +102,10 @@
     </div>
 </div>
 
-<!-- Juicer embedden instagram feed https://www.juicer.io/feeds/futureretro_store -->
+<!-- 
+    Instagram - Juicer embedden Instagram feed 
+    https://www.juicer.io/feeds/futureretro_store 
+-->
 <div class="home-page-item">
     <div class="container">
         <h1 class="logo-font text-black text-center pt-3">Instagram</h1>
