Added shopper review models, forms, views and templates

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -118,6 +118,12 @@
                                     <i class="fas fa-shopping-bag"></i>
                                 </span>
                             </button>
+                            <a href="{% url 'rating_products' product.id %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-star"></i>
+                                </span>
+                                <span class="text-uppercase">Rate Product</span>
+                            </a>
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
