--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
                     </li>
                     <li class="list-inline-item">
                         <a class="{% if like_items %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="{% url 'view_like' %}">
+                            href="#">
                             <div class="text-center">
                                 <div><i class="fas fa-heart fa-lg text-danger"></i></div>
                                 <p class="my-0">
