--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -20,8 +20,8 @@
     </div>
 </li>
 <li class="list-inline-item">
-    <a class="{% if like_items %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" 
-        href="{% url 'view_like' %}">
+    <a class="nav-link d-block d-lg-none" 
+        href="#}">
         <div class="text-center">
             <div><i class="fas fa-heart fa-lg text-danger"></i></div>
             <p class="my-0">
