--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,6 +50,10 @@
                     </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
+                <div class="text-left pl-4">
+                    <a href="{% url 'add_product_to_like' product.id %}"><i class=" btn btn-btn fas fa-lg fa-heart text-danger "></i></a>
+                   
+                </div>
                 <form class="form" action="" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -59,16 +63,6 @@
                                     min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_like_{{ product.id }}">
                             </div>
                         </div>
-                        <form action="#" method="POST">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-black btn-outline-black rounded-0 text-uppercase mt-1"
-                                name="like_button" value="{{ product.id }}">
-                                Add to Likes
-                                <span class="icon">
-                                    <i class="fas fa-lg fa-heart text-danger"></i>
-                                </span>
-                            </button>
-                        </form>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
