--- a/products/templates/products/liked_product.html
+++ b/products/templates/products/liked_product.html
@@ -44,6 +44,13 @@
                                         {% endif %}
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <a href="{% url 'product_detail' list_item.id %}" class="btn-outline-black btn rounded-0 text-uppercase my-2 py-2">
+                                            Add To <i class="fas fa-lg fa-shopping-bag"></i>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
