--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,8 +50,14 @@
                     </small>
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
-                <div class="text-left text-danger pl-4">
-                    <a href="{% url 'add_product_to_like' product.id %}"><i class="btn btn-outline-black btn rounded-0 text-uppercase my-2 py-2 fas fa-lg fa-heart"></i></a>
+                <div class="text-left pl-4">
+                    <a href="{% url 'add_product_to_like' product.id %}">
+                        <i class="btn border-black rounded-0 text-danger my-2 py-2 fas fa-lg fa-heart">
+                        </i>
+                    </a>
+                    <p class="my-0 text-black">
+                        Likes
+                    </p>
                 </div>
                 <form class="form" action="" method="POST">
                     {% csrf_token %}
