--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -15,7 +15,6 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <hr class="w-25 hr-heading-beige">
                 <p class="text-center">
                     The FutureRetro is a clothing company created by Erica Johnsson, the FutureRetro customer
                     is a modern-day woman who wants the classic and feminine silhouette of the 1940s-50s while
@@ -28,7 +27,6 @@
                     Frälsningsarmén och Blocket. It is my own interpretation of the timeless femininity of this
                     era and is intended for women in all walks of life: from the businesswoman to the stay-at-home
                     mom. Every woman deserves to feel feminine and beautiful!
-                    <a class="update-link text-info" href="#">For more information about FutureRetro click here!</a>
                 </p>
                 <p class="text-center">
                     Love,
@@ -39,10 +37,34 @@
     </div>
 </div>
 <div class="home-page-item">
+    <div class="container d-flex justify-content-center">
+        <div class="row ">
+            <div class="col-12 col-md-8 ">
+                <img src="{{ MEDIA_URL }}studio.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="home-page-item">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <img src="{{ MEDIA_URL }}studio.jpg" alt="">
+                <p class="text-center">
+                    <!-- Copied from: https://www.futurelearn.com/info/courses/sustainable-fashion/0/steps/13558 -->
+                    FutureRetro is excited to start upcycling. Upcycling is an approach to design where you transform 
+                    by-products, waste or disused materials or products into something new of better quality 
+                    and greater value. By reusing materials that already exist, you are saving energy, water, 
+                    chemicals and other resources required to make new virgin materials.
+                </p>
+                <p class="text-center">
+                    <!-- Copied from: https://www.futurelearn.com/info/courses/sustainable-fashion/0/steps/13558 -->
+                    This may seem like a common sense approach to design but even the smallest design choices 
+                    can impact how long a product’s life will last. There are many reasons that people discard clothing 
+                    – not the right fit, the person changes size, the fabric quality or the style becomes uncool. 
+                    The best way you can keep your products from going to landfill is by designing to last, to be 
+                    cared for and repaired, to be reused or to be passed on to others. This is our moto here at FutureRetro!
+                </p>
             </div>
         </div>
     </div>
