--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -56,7 +56,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'about' %}">
                 About
             </a>
         </li>
