Added feel free to swipe around p to New Releases

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -74,10 +74,11 @@
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="logo-font text-black text-center pt-3">New Releases</h1>
                 <hr class="w-25 hr-heading-beige p-2">
+                
             </div>
         </div>
     </div>
-    
+    <p class="text-black text-center pt-2"> <--- Feel free to swipe around! ---></p>
     <div class="container w-75">
         <div class="owl-carousel owl-theme">
             {% for product in products %}
