Added contact information to About page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -11,6 +11,11 @@
         </div>
     </div>
 </div>
+<p class="text-center">
+    <strong>Want to get in touch?</strong><br/>
+    Phone: +1-202-555-0130<br/>
+    Email: future_retro_cust@gmail.com
+</p>
 <div class="home-page-item">
     <div class="container">
         <div class="row justify-content-center">
