--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,5 +1,5 @@
 {% if item.product.image %}
-    <div>
+    <div class="w-75">
         <img class="img-fluid rounded" src="{{ item.product.image.url }}"
             alt="{{ item.product.name }}">
     </div>
